--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 [submodule "bitprim-core"]
 	path = bitprim-core
 	url = https://github.com/bitprim/bitprim-core.git
-    branch = dev
+    branch = rpc_tests
 [submodule "bitprim-database"]
 	path = bitprim-database
 	url = https://github.com/bitprim/bitprim-database.git
@@ -17,7 +17,7 @@
 [submodule "bitprim-consensus"]
 	path = bitprim-consensus
 	url = https://github.com/bitprim/bitprim-consensus.git
-	branch = dev
+	branch = rpc_test
 [submodule "bitprim-blockchain"]
 	path = bitprim-blockchain
 	url = https://github.com/bitprim/bitprim-blockchain.git
@@ -25,7 +25,7 @@
 [submodule "bitprim-node"]
 	path = bitprim-node
 	url = https://github.com/bitprim/bitprim-node.git
-	branch = dev
+	branch = rpc_test
 [submodule "bitprim-node-exe"]
 	path = bitprim-node-exe
 	url = https://github.com/bitprim/bitprim-node-exe.git
@@ -33,4 +33,4 @@
 [submodule "bitprim-node-cint"]
 	path = bitprim-node-cint
 	url = https://github.com/bitprim/bitprim-node-cint.git
-	branch = dev
+	branch = rpc_test
