--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,7 @@
 	path = bitprim-node-cint
 	url = https://github.com/bitprim/bitprim-node-cint.git
 	branch = rpc_test
+[submodule "bitprim-rpc"]
+	path = bitprim-rpc
+	url = https://github.com/bitprim/bitprim-rpc
+	branch = dev
