--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,7 @@ add_subdirectory(bitprim-consensus)
 add_subdirectory(bitprim-network)
 add_subdirectory(bitprim-database)
 add_subdirectory(bitprim-blockchain)
+add_subdirectory(bitprim-rpc)
 add_subdirectory(bitprim-node)
 add_subdirectory(bitprim-node-exe)
 add_subdirectory(bitprim-node-cint)
