--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,9 @@ set(ENABLE_SHARED OFF)
 set(ENABLE_SHARED_NODE_CINT ON)
 
 set(WITH_RPC ON)
+if (WITH_RPC)
+    add_definitions(-DBITPRIM_WITH_RPC)
+endif()
 
 if (WITH_LOCAL_MINING)
 	add_definitions(-DWITH_LOCAL_MINING)
