--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 [submodule "bitprim-core"]
 	path = bitprim-core
 	url = https://github.com/bitprim/bitprim-core.git
-        branch = dev
+        branch = ebp
 [submodule "bitprim-database"]
 	path = bitprim-database
 	url = https://github.com/bitprim/bitprim-database.git
@@ -21,11 +21,11 @@
 [submodule "bitprim-blockchain"]
 	path = bitprim-blockchain
 	url = https://github.com/bitprim/bitprim-blockchain.git
-	branch = dev
+	branch = ebp
 [submodule "bitprim-node"]
 	path = bitprim-node
 	url = https://github.com/bitprim/bitprim-node.git
-	branch = dev
+	branch = ebp
 [submodule "bitprim-node-exe"]
 	path = bitprim-node-exe
 	url = https://github.com/bitprim/bitprim-node-exe.git
@@ -37,4 +37,4 @@
 [submodule "bitprim-rpc"]
 	path = bitprim-rpc
 	url = https://github.com/bitprim/bitprim-rpc
-	branch = dev
+	branch = ebp
