--- a/.gitmodules
+++ b/.gitmodules
@@ -29,7 +29,7 @@
 [submodule "bitprim-node-exe"]
 	path = bitprim-node-exe
 	url = https://github.com/bitprim/bitprim-node-exe.git
-	branch = dev
+	branch = ebp
 [submodule "bitprim-node-cint"]
 	path = bitprim-node-cint
 	url = https://github.com/bitprim/bitprim-node-cint.git
