--- a/.gitmodules
+++ b/.gitmodules
@@ -5,11 +5,11 @@
 [submodule "bitprim-core"]
 	path = bitprim-core
 	url = https://github.com/bitprim/bitprim-core.git
-        branch = dev
+        branch = mempool
 [submodule "bitprim-database"]
 	path = bitprim-database
 	url = https://github.com/bitprim/bitprim-database.git
-	branch = dev
+	branch = mempool
 [submodule "bitprim-network"]
 	path = bitprim-network
 	url = https://github.com/bitprim/bitprim-network.git
@@ -21,7 +21,7 @@
 [submodule "bitprim-blockchain"]
 	path = bitprim-blockchain
 	url = https://github.com/bitprim/bitprim-blockchain.git
-	branch = dev
+	branch = mempool
 [submodule "bitprim-node"]
 	path = bitprim-node
 	url = https://github.com/bitprim/bitprim-node.git
@@ -37,4 +37,4 @@
 [submodule "bitprim-rpc"]
 	path = bitprim-rpc
 	url = https://github.com/bitprim/bitprim-rpc
-	branch = dev
+	branch = mempool
