--- a/.gitmodules
+++ b/.gitmodules
@@ -5,7 +5,7 @@
 [submodule "bitprim-core"]
 	path = bitprim-core
 	url = https://github.com/bitprim/bitprim-core.git
-        branch = dev
+        branch = feature_compile_time_currencies
 [submodule "bitprim-database"]
 	path = bitprim-database
 	url = https://github.com/bitprim/bitprim-database.git
@@ -13,28 +13,28 @@
 [submodule "bitprim-network"]
 	path = bitprim-network
 	url = https://github.com/bitprim/bitprim-network.git
-	branch = dev
+	branch = feature_compile_time_currencies
 [submodule "bitprim-consensus"]
 	path = bitprim-consensus
 	url = https://github.com/bitprim/bitprim-consensus.git
-	branch = dev
+	branch = feature_compile_time_currencies
 [submodule "bitprim-blockchain"]
 	path = bitprim-blockchain
 	url = https://github.com/bitprim/bitprim-blockchain.git
-	branch = dev
+	branch = feature_compile_time_currencies
 [submodule "bitprim-node"]
 	path = bitprim-node
 	url = https://github.com/bitprim/bitprim-node.git
-	branch = dev
+	branch = feature_compile_time_currencies
 [submodule "bitprim-node-exe"]
 	path = bitprim-node-exe
 	url = https://github.com/bitprim/bitprim-node-exe.git
-	branch = dev
+	branch = feature_compile_time_currencies
 [submodule "bitprim-node-cint"]
 	path = bitprim-node-cint
 	url = https://github.com/bitprim/bitprim-node-cint.git
-	branch = dev
+	branch = feature_compile_time_currencies
 [submodule "bitprim-rpc"]
 	path = bitprim-rpc
 	url = https://github.com/bitprim/bitprim-rpc
-	branch = dev
+	branch = feature_compile_time_currencies
