--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 [submodule "bitprim-database"]
 	path = bitprim-database
 	url = https://github.com/bitprim/bitprim-database.git
-	branch = mempool
+	branch = feature_rpc_improvements
 [submodule "bitprim-network"]
 	path = bitprim-network
 	url = https://github.com/bitprim/bitprim-network.git
@@ -21,7 +21,7 @@
 [submodule "bitprim-blockchain"]
 	path = bitprim-blockchain
 	url = https://github.com/bitprim/bitprim-blockchain.git
-	branch = mempool
+	branch = feature_rpc_improvements
 [submodule "bitprim-node"]
 	path = bitprim-node
 	url = https://github.com/bitprim/bitprim-node.git
@@ -37,4 +37,4 @@
 [submodule "bitprim-rpc"]
 	path = bitprim-rpc
 	url = https://github.com/bitprim/bitprim-rpc
-	branch = mempool
+	branch = feature_rpc_improvements
